# gman

./: .SRCINFO  PKGBUILD  Readme.md  pyproject.toml
gman/: cli.py
